fix asset paths

--- a/themes/educ/default/_footer.twig
+++ b/themes/educ/default/_footer.twig
@@ -35,8 +35,8 @@
       2022 All rights reserved by EDUC consortium.
     </div>
     <div class="col text-center text-sm-end mt-5 mt-sm-0 text-nowrap">
-      <img src="/assets/img/EU_text_mirrored.svg" height="50" class="d-none d-sm-inline-block me-2" alt="">
-      <img src="/assets/img/EU_flag.svg" height="50" alt="" class="d-sm-inline-block">
+      <img src="{{ asset('img/EU_text_mirrored.svg')}}" height="50" class="d-none d-sm-inline-block me-2" alt="">
+      <img src="{{ asset('img/EU_flag.svg')}}" height="50" alt="" class="d-sm-inline-block">
     </div>
   </div>
 
