--- a/themes/educ/default/_header_1.twig
+++ b/themes/educ/default/_header_1.twig
@@ -1,5 +1,5 @@
 <header id="header">
-    <img src="/assets/img/educ_course_catalogue_logo.svg" id="logo" alt="Educ Course Catalogue Logo" width="195" height="196">
+    <img src="{{asset('img/educ_course_catalogue_logo.svg', 'educ')}}" id="logo" alt="Educ Course Catalogue Logo" width="195" height="196">
 </header>
 {% if not hideLanguageBar %}
     <div id="languagebar">
