--- a/public/assets/css/default.less
+++ b/public/assets/css/default.less
@@ -571,3 +571,8 @@ button.btn-idpselect + p {
 	margin-top: 1.5rem;
 	margin-bottom: .5rem;
 }
+
+button .small {
+	font-size: .7rem;
+	color: #9c75e3;
+}
