--- a/themes/educ/default/base.twig
+++ b/themes/educ/default/base.twig
@@ -7,26 +7,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>{{ pagetitle }}</title>
     <link rel="stylesheet" href="{{asset("css/default.css", 'educ')}}">
-    <link rel="icon" href="{{asset('icon/favicon.ico')}}" type="image/vnd.microsoft.icon">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{asset('icon/favicon-16x16.png')}}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('icon/favicon-32x32.png')}}">
-    <link rel="icon" type="image/png" sizes="96x96" href="{{ asset('icon/favicon-96x96.png')}}">
-    <link rel="icon" type="image/png" sizes="192x192" href="{{ asset('icon/android-icon-192x192.png')}}">
-    <link rel="apple-touch-icon" sizes="57x57" href="{{ asset('icon/apple-icon-57x57.png')}}">
-    <link rel="apple-touch-icon" sizes="60x60" href="{{ asset('icon/apple-icon-60x60.png')}}">
-    <link rel="apple-touch-icon" sizes="72x72" href="{{ asset('icon/apple-icon-72x72.png')}}">
-    <link rel="apple-touch-icon" sizes="76x76" href="{{ asset('icon/apple-icon-76x76.png')}}">
-    <link rel="apple-touch-icon" sizes="114x114" href="{{ asset('icon/apple-icon-114x114.png')}}">
-    <link rel="apple-touch-icon" sizes="120x120" href="{{ asset('icon/apple-icon-120x120.png')}}">
-    <link rel="apple-touch-icon" sizes="144x144" href="{{ asset('icon/apple-icon-144x144.png')}}">
-    <link rel="apple-touch-icon" sizes="152x152" href="{{ asset('icon/apple-icon-152x152.png')}}">
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('icon/apple-icon-180x180.png')}}">
+    <link rel="icon" href="{{asset('icon/favicon.ico', 'educ')}}" type="image/vnd.microsoft.icon">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{asset('icon/favicon-16x16.png', 'educ')}}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('icon/favicon-32x32.png', 'educ')}}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ asset('icon/favicon-96x96.png', 'educ')}}">
+    <link rel="icon" type="image/png" sizes="192x192" href="{{ asset('icon/android-icon-192x192.png', 'educ')}}">
+    <link rel="apple-touch-icon" sizes="57x57" href="{{ asset('icon/apple-icon-57x57.png', 'educ')}}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{ asset('icon/apple-icon-60x60.png', 'educ')}}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ asset('icon/apple-icon-72x72.png', 'educ')}}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ asset('icon/apple-icon-76x76.png', 'educ')}}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ asset('icon/apple-icon-114x114.png', 'educ')}}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{ asset('icon/apple-icon-120x120.png', 'educ')}}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ asset('icon/apple-icon-144x144.png', 'educ')}}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{ asset('icon/apple-icon-152x152.png', 'educ')}}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('icon/apple-icon-180x180.png', 'educ')}}">
     <link rel="preload" href="{{ asset('fonts/fa-solid-900.woff2') }}" as="font" crossorigin>
     <link rel="stylesheet" href="{{ asset("font-awesome/css/all.css", 'educ') }}">
 
-    <link rel="manifest" href="{{ asset('icon/manifest.json')}}">
+    <link rel="manifest" href="{{ asset('icon/manifest.json', 'educ')}}">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="{{asset('icon/ms-icon-144x144.png')}}">
+    <meta name="msapplication-TileImage" content="{{asset('icon/ms-icon-144x144.png', 'educ')}}">
     <meta name="theme-color" content="#ffffff">
     <meta name="robots" content="noindex, nofollow">
     {{ include('_head.twig', ignore_missing = true) }}
