--- a/public/assets/css/default.less
+++ b/public/assets/css/default.less
@@ -585,6 +585,301 @@ button .small {
 	align-content: flex-start;
 }
 
+.pure-u {
+	display: inline-block;
+	vertical-align: top;
+}
+
+.pure-u-1,
+.pure-u-1-1,
+.pure-u-1-2,
+.pure-u-1-3,
+.pure-u-2-3,
+.pure-u-1-4,
+.pure-u-3-4,
+.pure-u-1-5,
+.pure-u-2-5,
+.pure-u-3-5,
+.pure-u-4-5,
+.pure-u-5-5,
+.pure-u-1-6,
+.pure-u-5-6,
+.pure-u-1-8,
+.pure-u-3-8,
+.pure-u-5-8,
+.pure-u-7-8,
+.pure-u-1-12,
+.pure-u-5-12,
+.pure-u-7-12,
+.pure-u-11-12,
+.pure-u-1-24,
+.pure-u-2-24,
+.pure-u-3-24,
+.pure-u-4-24,
+.pure-u-5-24,
+.pure-u-6-24,
+.pure-u-7-24,
+.pure-u-8-24,
+.pure-u-9-24,
+.pure-u-10-24,
+.pure-u-11-24,
+.pure-u-12-24,
+.pure-u-13-24,
+.pure-u-14-24,
+.pure-u-15-24,
+.pure-u-16-24,
+.pure-u-17-24,
+.pure-u-18-24,
+.pure-u-19-24,
+.pure-u-20-24,
+.pure-u-21-24,
+.pure-u-22-24,
+.pure-u-23-24,
+.pure-u-24-24 {
+	display: inline-block;
+	letter-spacing: normal;
+	word-spacing: normal;
+	vertical-align: top;
+	text-rendering: auto;
+}
+
+.pure-u-1-24 {
+	width: 4.1667%;
+}
+
+.pure-u-1-12,
+.pure-u-2-24 {
+	width: 8.3333%;
+}
+
+.pure-u-1-8,
+.pure-u-3-24 {
+	width: 12.5000%;
+}
+
+.pure-u-1-6,
+.pure-u-4-24 {
+	width: 16.6667%;
+}
+
+.pure-u-1-5 {
+	width: 20%;
+}
+
+.pure-u-5-24 {
+	width: 20.8333%;
+}
+
+.pure-u-1-4,
+.pure-u-6-24 {
+	width: 25%;
+}
+
+.pure-u-7-24 {
+	width: 29.1667%;
+}
+
+.pure-u-1-3,
+.pure-u-8-24 {
+	width: 33.3333%;
+}
+
+.pure-u-3-8,
+.pure-u-9-24 {
+	width: 37.5000%;
+}
+
+.pure-u-2-5 {
+	width: 40%;
+}
+
+.pure-u-5-12,
+.pure-u-10-24 {
+	width: 41.6667%;
+}
+
+.pure-u-11-24 {
+	width: 45.8333%;
+}
+
+.pure-u-1-2,
+.pure-u-12-24 {
+	width: 50%;
+}
+
+.pure-u-13-24 {
+	width: 54.1667%;
+}
+
+.pure-u-7-12,
+.pure-u-14-24 {
+	width: 58.3333%;
+}
+
+.pure-u-3-5 {
+	width: 60%;
+}
+
+.pure-u-5-8,
+.pure-u-15-24 {
+	width: 62.5000%;
+}
+
+.pure-u-2-3,
+.pure-u-16-24 {
+	width: 66.6667%;
+}
+
+.pure-u-17-24 {
+	width: 70.8333%;
+}
+
+.pure-u-3-4,
+.pure-u-18-24 {
+	width: 75%;
+}
+
+.pure-u-19-24 {
+	width: 79.1667%;
+}
+
+.pure-u-4-5 {
+	width: 80%;
+}
+
+.pure-u-5-6,
+.pure-u-20-24 {
+	width: 83.3333%;
+}
+
+.pure-u-7-8,
+.pure-u-21-24 {
+	width: 87.5000%;
+}
+
+.pure-u-11-12,
+.pure-u-22-24 {
+	width: 91.6667%;
+}
+
+.pure-u-23-24 {
+	width: 95.8333%;
+}
+
+.pure-u-1,
+.pure-u-1-1,
+.pure-u-5-5,
+.pure-u-24-24 {
+	width: 100%;
+}
+.pure-button {
+	/* Structure */
+	display: inline-block;
+	line-height: normal;
+	white-space: nowrap;
+	vertical-align: middle;
+	text-align: center;
+	cursor: pointer;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	user-select: none;
+	box-sizing: border-box;
+}
+
+/* Firefox: Get rid of the inner focus border */
+.pure-button::-moz-focus-inner {
+	padding: 0;
+	border: 0;
+}
+
+/* Inherit .pure-g styles */
+.pure-button-group {
+	letter-spacing: -0.31em; /* Webkit: collapse white-space between units */
+	text-rendering: optimizespeed; /* Webkit: fixes text-rendering: optimizeLegibility */
+}
+
+.opera-only :-o-prefocus,
+.pure-button-group {
+	word-spacing: -0.43em;
+}
+
+.pure-button-group .pure-button {
+	letter-spacing: normal;
+	word-spacing: normal;
+	vertical-align: top;
+	text-rendering: auto;
+}
+
+/*csslint outline-none:false*/
+
+.pure-button {
+	font-family: inherit;
+	font-size: 100%;
+	padding: 0.5em 1em;
+	color: rgba(0, 0, 0, 0.80);
+	border: none rgba(0, 0, 0, 0);
+	background-color: #E6E6E6;
+	text-decoration: none;
+	border-radius: 2px;
+}
+
+.pure-button-hover,
+.pure-button:hover,
+.pure-button:focus {
+	background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
+}
+.pure-button:focus {
+	outline: 0;
+}
+.pure-button-active,
+.pure-button:active {
+	box-shadow: 0 0 0 1px rgba(0,0,0, 0.15) inset, 0 0 6px rgba(0,0,0, 0.20) inset;
+	border-color: #000;
+}
+
+.pure-button[disabled],
+.pure-button-disabled,
+.pure-button-disabled:hover,
+.pure-button-disabled:focus,
+.pure-button-disabled:active {
+	border: none;
+	background-image: none;
+	opacity: 0.40;
+	cursor: not-allowed;
+	box-shadow: none;
+	pointer-events: none;
+}
+
+.pure-button-hidden {
+	display: none;
+}
+
+.pure-button-primary,
+.pure-button-selected,
+a.pure-button-primary,
+a.pure-button-selected {
+	background-color: rgb(0, 120, 231);
+	color: #fff;
+}
+
+/* Button Groups */
+.pure-button-group .pure-button {
+	margin: 0;
+	border-radius: 0;
+	border-right: 1px solid rgba(0, 0, 0, 0.2);
+
+}
+
+.pure-button-group .pure-button:first-child {
+	border-top-left-radius: 2px;
+	border-bottom-left-radius: 2px;
+}
+.pure-button-group .pure-button:last-child {
+	border-top-right-radius: 2px;
+	border-bottom-right-radius: 2px;
+	border-right: none;
+}
+
 /*
 Box-model set to false because we're setting a height on select elements, which
 also have border and padding. This is done because some browsers don't render
@@ -954,4 +1249,237 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 		/* Increased bottom padding to make it group with its related input element. */
 		padding: 0.2em 0 0.8em;
 	}
+}
+
+.pure-table {
+	/* Remove spacing between table cells (from Normalize.css) */
+	border-collapse: collapse;
+	border-spacing: 0;
+	empty-cells: show;
+	border: 1px solid #cbcbcb;
+}
+
+.pure-table caption {
+	color: #000;
+	font: italic 85%/1 arial, sans-serif;
+	padding: 1em 0;
+	text-align: center;
+}
+
+.pure-table td,
+.pure-table th {
+	border-left: 1px solid #cbcbcb;/*  inner column border */
+	border-width: 0 0 0 1px;
+	font-size: inherit;
+	margin: 0;
+	overflow: visible; /*to make ths where the title is really long work*/
+	padding: 0.5em 1em; /* cell padding */
+}
+
+.pure-table thead {
+	background-color: #e0e0e0;
+	color: #000;
+	text-align: left;
+	vertical-align: bottom;
+}
+
+/*
+striping:
+   even - #fff (white)
+   odd  - #f2f2f2 (light gray)
+*/
+.pure-table td {
+	background-color: transparent;
+}
+.pure-table-odd td {
+	background-color: #f2f2f2;
+}
+
+/* nth-child selector for modern browsers */
+.pure-table-striped tr:nth-child(2n-1) td {
+	background-color: #f2f2f2;
+}
+
+/* BORDERED TABLES */
+.pure-table-bordered td {
+	border-bottom: 1px solid #cbcbcb;
+}
+.pure-table-bordered tbody > tr:last-child > td {
+	border-bottom-width: 0;
+}
+
+
+/* HORIZONTAL BORDERED TABLES */
+
+.pure-table-horizontal td,
+.pure-table-horizontal th {
+	border-width: 0 0 1px 0;
+	border-bottom: 1px solid #cbcbcb;
+}
+.pure-table-horizontal tbody > tr:last-child > td {
+	border-bottom-width: 0;
+}
+
+pre code.hljs {
+	display: block;
+	overflow-x: auto;
+	padding: 1em
+}
+code.hljs {
+	padding: 3px 5px
+}
+/*!
+  Theme: Zenburn
+  Author: elnawe
+  License: ~ MIT (or more permissive) [via base16-schemes-source]
+  Maintainer: @highlightjs/core-team
+  Version: 2021.09.0
+*/
+/*
+  WARNING: DO NOT EDIT THIS FILE DIRECTLY.
+
+  This theme file was auto-generated from the Base16 scheme zenburn
+  by the Highlight.js Base16 template builder.
+
+  - https://github.com/highlightjs/base16-highlightjs
+*/
+/*
+base00  #383838  Default Background
+base01  #404040  Lighter Background (Used for status bars, line number and folding marks)
+base02  #606060  Selection Background
+base03  #6f6f6f  Comments, Invisibles, Line Highlighting
+base04  #808080  Dark Foreground (Used for status bars)
+base05  #dcdccc  Default Foreground, Caret, Delimiters, Operators
+base06  #c0c0c0  Light Foreground (Not often used)
+base07  #ffffff  Light Background (Not often used)
+base08  #dca3a3  Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted
+base09  #dfaf8f  Integers, Boolean, Constants, XML Attributes, Markup Link Url
+base0A  #e0cf9f  Classes, Markup Bold, Search Text Background
+base0B  #5f7f5f  Strings, Inherited Class, Markup Code, Diff Inserted
+base0C  #93e0e3  Support, Regular Expressions, Escape Characters, Markup Quotes
+base0D  #7cb8bb  Functions, Methods, Attribute IDs, Headings
+base0E  #dc8cc3  Keywords, Storage, Selector, Markup Italic, Diff Changed
+base0F  #000000  Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
+*/
+pre code.hljs {
+	display: block;
+	overflow-x: auto;
+	padding: 1em
+}
+code.hljs {
+	padding: 3px 5px
+}
+.hljs {
+	color: #dcdccc;
+	background: #383838
+}
+.hljs::selection,
+.hljs ::selection {
+	background-color: #606060;
+	color: #dcdccc
+}
+/* purposely do not highlight these things */
+.hljs-formula,
+.hljs-params,
+.hljs-property {
+
+}
+/* base03 - #6f6f6f -  Comments, Invisibles, Line Highlighting */
+.hljs-comment {
+	color: #6f6f6f
+}
+/* base04 - #808080 -  Dark Foreground (Used for status bars) */
+.hljs-tag {
+	color: #808080
+}
+/* base05 - #dcdccc -  Default Foreground, Caret, Delimiters, Operators */
+.hljs-subst,
+.hljs-punctuation,
+.hljs-operator {
+	color: #dcdccc
+}
+.hljs-operator {
+	opacity: 0.7
+}
+/* base08 - Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted */
+.hljs-bullet,
+.hljs-variable,
+.hljs-template-variable,
+.hljs-selector-tag,
+.hljs-name,
+.hljs-deletion {
+	color: #dca3a3
+}
+/* base09 - Integers, Boolean, Constants, XML Attributes, Markup Link Url */
+.hljs-symbol,
+.hljs-number,
+.hljs-link,
+.hljs-attr,
+.hljs-variable.constant_,
+.hljs-literal {
+	color: #dfaf8f
+}
+/* base0A - Classes, Markup Bold, Search Text Background */
+.hljs-title,
+.hljs-class .hljs-title,
+.hljs-title.class_ {
+	color: #e0cf9f
+}
+.hljs-strong {
+	font-weight: bold;
+	color: #e0cf9f
+}
+/* base0B - Strings, Inherited Class, Markup Code, Diff Inserted */
+.hljs-code,
+.hljs-addition,
+.hljs-title.class_.inherited__,
+.hljs-string {
+	color: #5f7f5f
+}
+/* base0C - Support, Regular Expressions, Escape Characters, Markup Quotes */
+/* guessing */
+.hljs-built_in,
+.hljs-doctag,
+.hljs-quote,
+.hljs-keyword.hljs-atrule,
+.hljs-regexp {
+	color: #93e0e3
+}
+/* base0D - Functions, Methods, Attribute IDs, Headings */
+.hljs-function .hljs-title,
+.hljs-attribute,
+.ruby .hljs-property,
+.hljs-title.function_,
+.hljs-section {
+	color: #7cb8bb
+}
+/* base0E - Keywords, Storage, Selector, Markup Italic, Diff Changed */
+/* .hljs-selector-id, */
+/* .hljs-selector-class, */
+/* .hljs-selector-attr, */
+/* .hljs-selector-pseudo, */
+.hljs-type,
+.hljs-template-tag,
+.diff .hljs-meta,
+.hljs-keyword {
+	color: #dc8cc3
+}
+.hljs-emphasis {
+	color: #dc8cc3;
+	font-style: italic
+}
+/* base0F - Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?> */
+/*
+  prevent top level .keyword and .string scopes
+  from leaking into meta by accident
+*/
+.hljs-meta,
+.hljs-meta .hljs-keyword,
+.hljs-meta .hljs-string {
+	color: #000000
+}
+/* for v10 compatible themes */
+.hljs-meta .hljs-keyword,
+.hljs-meta-keyword {
+	font-weight: bold
 }
