--- a/themes/educ/default/base.twig
+++ b/themes/educ/default/base.twig
@@ -6,6 +6,7 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>{{ pagetitle }}</title>
+    <link rel="stylesheet" href="{{ asset("css/stylesheet.css") }}">
     <link rel="stylesheet" href="{{asset("css/default.css", 'educ')}}">
     <link rel="icon" href="{{asset('icon/favicon.ico', 'educ')}}" type="image/vnd.microsoft.icon">
     <link rel="icon" type="image/png" sizes="16x16" href="{{asset('icon/favicon-16x16.png', 'educ')}}">
