fix logo alt text

--- a/themes/educ/default/_header_1.twig
+++ b/themes/educ/default/_header_1.twig
@@ -1,6 +1,6 @@
 <header id="header">
     <a href="https://educalliance.eu">
-        <img src="{{asset('img/educ_logo.svg', 'educ')}}" id="logo" alt="Educ Course Catalogue Logo">
+        <img src="{{asset('img/educ_logo.svg', 'educ')}}" id="logo" alt="Educ Alliance Logo">
     </a>
 </header>
 {% if not hideLanguageBar %}
