--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -6,7 +6,8 @@ body {
   text-align: left;
   background: #ffffff;
   color: #333;
-  font: 83%/1.5 arial, tahoma, verdana, sans-serif;
+  font: 83%/1.5;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 img {
   border: none;
@@ -116,7 +117,7 @@ h4,
 h5,
 h6 {
   letter-spacing: -1px;
-  font-family: arial, verdana, sans-serif;
+  font-weight: 700;
   margin: 1.2em 0 0.3em;
   color: #000;
   border-bottom: 1px solid #eee;
@@ -129,6 +130,7 @@ h1 {
 }
 h2 {
   font-size: 136%;
+  font-weight: 600;
 }
 h3 {
   font-size: 126%;
@@ -395,14 +397,24 @@ div.login-help {
   margin-right: auto;
 }
 #header h1 {
-  display: flex;
   align-items: center;
+  padding: 0;
+  margin: 1.5rem 0 0 0;
+  color: #000;
 }
 #header h1 a {
   color: #2e6da4;
 }
 #header h1 a:hover {
   color: #15446e;
+}
+#header h2 {
+  padding: 0;
+  margin: 0.5rem 0 0 0;
+}
+#header h1,
+#header h2 {
+  border-bottom: none;
 }
 #header a {
   border: none;
