--- a/public/assets/css/default.less
+++ b/public/assets/css/default.less
@@ -13,7 +13,7 @@ body {
 
 img {
 	border: none;
-	display: block;
+	//display: block;
 }
 
 img#logo {
@@ -581,4 +581,16 @@ div.alert {
 
 .frontpage-menu {
     margin-top: 1rem;
+}
+
+.footer-content {
+    font-size: small;
+}
+
+.followers {
+
+}
+
+.text-pink {
+    color: #f76d98;
 }
