- subtitle translations... - display logos...

--- a/themes/educ/default/_footer.twig
+++ b/themes/educ/default/_footer.twig
@@ -4,7 +4,7 @@
             <img alt="EU flag" src="{{ asset('img/EU_flag_text.png', 'educ') }}" height="45">
         </div>
         <div class="col text-end text-sm-center d-flex flex-column">
-            <p class="mb-2 font-semibold"> Follow Us On:</p>
+            <p class="mb-2 font-semibold">{{ "Follow Us On" | trans }}:</p>
             <div class="d-flex justify-content-center gap-3 text-pink">
                 <a href="https://www.facebook.com/educunivercity" target="_blank" class="text-decoration-none">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
