--- a/themes/educ/default/base.twig
+++ b/themes/educ/default/base.twig
@@ -35,7 +35,7 @@
   <body id="{{ templateId }}">
     <div id="wrap" class="container">
       {% block header %}{% include "_header.twig" %}{% endblock %}
-      <main>
+      <main id="content">
         {% block contentwrapper1 %}{% block content %}{% endblock %}{% endblock contentwrapper1 %}
       </main>
       {% block footer %}{% include "_footer.twig" %}{% endblock %}
