translate SSP main title

--- a/themes/educ/default/_header.twig
+++ b/themes/educ/default/_header.twig
@@ -3,7 +3,7 @@
         <img src="{{asset('img/educ_logo.svg', 'educ')}}" id="logo" alt="Educ Alliance Logo">
     </a>
     <div class="header-title">
-        <h1>{{ mainTitle }}</h1>
+        <h1>{{ mainTitle | trans }}</h1>
         <h2>{{ pagetitle }}</h2>
     </div>
 </header>
